# TheAlgorithms

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cc  main.cpp
Algorithms/MaxSubarray/: BruteForce.cpp  DivideAndConquer.cpp  Kadanes.cpp
Algorithms/Sorting/: BubbleSort.cpp  CMakeLists.txt  HeapSort.cpp  InsertionSort.cpp  MergeInsertionSort.cpp  MergeSort.cpp  QuickSort.cpp  SelectionSort.cpp  Utils.hpp
DataStructures/: CMakeLists.txt  Main.cpp
DataStructures/Include/: List.hpp  Queue.hpp  Stack.hpp  Vector.hpp
LeetCode/: CMakeLists.txt  Main.cpp
LeetCode/Easy/: 0001_TwoSum.hpp  0013_RomanToInteger.hpp  0014_LongestCommonPrefix.hpp  0020_ValidParentheses.hpp  0026_RemoveDuplicatesFromSortedArray.hpp  0027_RemoveElement.hpp  0035_SearchInsertPosition.hpp  0058_LengthOfLastWord.hpp  0066_PlusOne.hpp  0069_Sqrt(x).hpp  0083_RemoveDuplicatesFromSortedList.hpp  0088_MergeSortedArray.hpp  0404_SumOfLeftLeaves.hpp
data-structures/: CMakeLists.txt
data-structures/include/: vector.h
include/: DLinkedList.h  Deque.h  List.h  Queue.h  SLinkedList.h  Stack.h  Vector.h  list.h
max-subarray/: CMakeLists.txt  brute_force.cpp  divide_and_conquer.cpp  kadanes.cpp
sorting/: CMakeLists.txt  bubble_sort.cpp  heap_sort.cpp  insertion_sort.cpp  merge_insertion_sort.cpp  merge_sort.cpp  quick_sort.cpp  selection_sort.cpp  utils.h
tests/: tList.cpp
